jomini_derive/tests/compile-fail/borrow_on_reference.stderr
error: borrow attribute is unnecessary for reference types like &str - they are implicitly borrowed
 --> tests/compile-fail/borrow_on_reference.rs:6:5
  |
6 |     field: &'a str,
  |     ^^^^^
